add feature: index.html print query params